add webp signatures

--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,8 @@ img {
 .card {
     display: flex;
     position: relative;
+    justify-content: center;
+    align-items: center;
 }
 
 .signature {
