--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,9 @@ img {
     justify-content: center;
     align-items: center;
 }
-
+.card > img {
+    opacity: 30%;
+}
 .signature {
     position: absolute;
     opacity: 0%;
