--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap');
 body {
     display: flex;
     justify-content: center;
@@ -25,9 +26,6 @@ body {
     width: 9vw;
     min-height: 9vw;
     color: white;
-    font-size: 3.9vw;
-    line-height: 100%;
-    text-align: center;
     justify-content: center;
     align-items: center;
 }
@@ -98,28 +96,22 @@ img {
 }
 
 .button {
-    background-color: #E7D600;
-    width: 9vw;
-    height: 3vw;
-    max-width: 128px;
-    max-height: 42px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    font-family: 'Nunito', sans-serif;
+    background-color: #ff51c4;
+    font-size: 20px;
+    color: white;
+    width: 128px;
+    height: 42px;
     margin: 20px;
-    border-radius: 50px;
+    border-radius: 10px;
+    border: none;
 }
 
 @media screen and (min-width: 1408px) {
     .sidebar {
-        font-size: 55px;
         min-height: 128px;
     }
-    .sidebar__party1 {
-        font-size: 45px;
-    }
-    .sidebar__party2 {
-        font-size: 45px;
-    }
-    .sidebar__normal {
-        font-size: 35px;
-    }
-
 }
