--- a/styles.css
+++ b/styles.css
@@ -105,8 +105,8 @@ img {
     color: white;
     width: 15vw;
     height: 6vw;
-    margin: 20px;
-    border-radius: 10px;
+    margin: 1.4vw;
+    border-radius: 0.7vw;
     border: none;
 }
 
