--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,16 @@ img {
 .applyDataButton {
     margin: 0;
 }
+
+.copyDataModalButton {
+    width: 12vw;
+    height: 8vw;
+    max-width: 75px;
+    max-height: 50px;
+    font-size: 2.5vw;
+    margin: 1vw;
+
+}
 dialog {
     background-color: #F8C8C4;
     border: 0;
@@ -171,12 +181,37 @@ input:focus {
     outline: 2px solid #00C7B1;
 }
 
+.dataArea {
+    width: 32vw;
+    height: 24vw;
+    max-width: 200px;
+    max-height: 150px;
+    resize: none;
+    border: 0;
+    font-family: 'Nunito', sans-serif;
+    background-color: #b2ffdd;
+    border-radius: 10px;
+    -ms-overflow-style: none;  /* IE and Edge 스크롤바 없애기*/
+    scrollbar-width: none; /*Firefox 스크롤바 없애기*/
+}
+
+.dataArea:focus {
+    outline: 0;
+}
+
+.dataArea::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera 스크롤바 없애기*/
+}
+
 @media screen and (min-width: 625px) {
     .button {
         font-size: 30px;
     }
     label {
         font-size: 16px;
+    }
+    .copyDataModalButton {
+        font-size: 15px;
     }
 }
 @media screen and (min-width: 1408px) {
