--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,7 @@ img {
     height: 12vw;
     max-width: 100px;
     max-height: 75px;
+    line-height: 110%;
     margin: 3.2vw;
     border-radius: 10px;
     border: none;
