--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,22 @@ img {
 
 }
 
+.logo {
+    display: flex;
+    width: 9vw;
+    height: 9vw;
+    max-width: 128px;
+    max-height: 128px;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo > img {
+    width: 7vw;
+    height: 7vw;
+    max-width: 100px;
+    max-height: 100px;
+}
 .card {
     width: 9vw;
     height: 9vw;
