--- a/styles.css
+++ b/styles.css
@@ -141,6 +141,11 @@ img {
     margin: 1vw;
 
 }
+
+.sortByGroupSwitch {
+    font-size: 2.4vw;
+}
+
 dialog {
     background-color: #F8C8C4;
     border: 0;
@@ -227,6 +232,9 @@ input:focus {
         font-size: 16px;
     }
     .copyDataModalButton {
+        font-size: 15px;
+    }
+    .sortByGroupSwitch {
         font-size: 15px;
     }
 }
