--- a/styles.css
+++ b/styles.css
@@ -163,7 +163,6 @@ img {
     max-width: 94px;
     max-height: 55px;
     margin: 1vw;
-    font-size: 3vw;
 }
 
 .sortByGroupSwitch, .changeCardStyleButton {
@@ -172,6 +171,8 @@ img {
     max-width: 200px;
     max-height: 30px;
     margin: 1vw;
+}
+.changeCardStyleButton {
     font-size: 2.5vw;
 }
 
@@ -262,6 +263,9 @@ input:focus {
     }
     .modalSmallButton, .sortByGroupSwitch, .changeCardStyleButton {
         margin: 6px;
+    }
+    .changeCardStyleButton {
+        font-size: 16px;
     }
 }
 @media screen and (min-width: 1408px) {
