--- a/styles.css
+++ b/styles.css
@@ -171,8 +171,6 @@ img {
     max-width: 200px;
     max-height: 30px;
     margin: 1vw;
-}
-.changeCardStyleButton {
     font-size: 2.5vw;
 }
 
@@ -264,7 +262,7 @@ input:focus {
     .modalSmallButton, .sortByGroupSwitch, .changeCardStyleButton {
         margin: 6px;
     }
-    .changeCardStyleButton {
+    .sortByGroupSwitch, .changeCardStyleButton {
         font-size: 16px;
     }
 }
